test/errors/invalid_payload_type_in_discontinue.ml
let () =
  match%discontinue k (Invalid_argument "failed") with
  | [%effect ()] -> ()
;;
